--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,8 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npx next export -o out
+      - name: Setup Pages              # ← 新增这步
+        uses: actions/configure-pages@v5
       - uses: actions/upload-pages-artifact@v3
         with:
           path: out
