docs(content): Update GAME daily report for 2025-09-08

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,50 @@
 {
-  "site": { "title": "AI / 游戏 日报", "description": "每天 10 分钟，跟上进展", "baseUrl": "/daily-site" },
-  "categories": { "ai": "AI 日报", "game": "游戏日报" },
+  "site": {
+    "title": "AI / 游戏 日报",
+    "description": "每天 10 分钟，跟上进展",
+    "baseUrl": "/daily-site"
+  },
+  "categories": {
+    "ai": "AI 日报",
+    "game": "游戏日报"
+  },
   "months": {
-    "ai": { "2025-09": [
-      { "date": "2025-09-03", "title": "AI 日报 · 2025-09-03", "summary": "…", "tags": ["AI","Daily"], "url": "ai/2025/09/03.md" }
-    ]},
-    "game": { "2025-09": [
-      { "date": "2025-09-03", "title": "游戏日报 · 2025-09-03", "summary": "…", "tags": ["Game"], "url": "game/2025/09/03.md" }
-    ]}
+    "ai": {
+      "2025-09": [
+        {
+          "date": "2025-09-03",
+          "title": "AI 日报 · 2025-09-03",
+          "summary": "…",
+          "tags": [
+            "AI",
+            "Daily"
+          ],
+          "url": "ai/2025/09/03.md"
+        }
+      ]
+    },
+    "game": {
+      "2025-09": [
+        {
+          "date": "2025-09-08",
+          "title": "{\"content\": \"# 🎮 游戏行业速递 - 2025年09月08日",
+          "summary": "{\"content\": \" 🎮 游戏行业速递 2025年09月08日 平台巨头入局AI应用市场：字节跳动与Instagram崛起，「场景+AI」成竞争新焦点 分类： 市场分析 来源： DataEye游戏观察 核心洞察： AI应用市场正经历一...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/08.md"
+        },
+        {
+          "date": "2025-09-03",
+          "title": "游戏日报 · 2025-09-03",
+          "summary": "…",
+          "tags": [
+            "Game"
+          ],
+          "url": "game/2025/09/03.md"
+        }
+      ]
+    }
   }
 }
-
