--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,8 +27,8 @@
       "2025-09": [
         {
           "date": "2025-09-08",
-          "title": "{\"content\": \"# 🎮 游戏行业速递 - 2025年09月08日",
-          "summary": "{\"content\": \" 🎮 游戏行业速递 2025年09月08日 平台巨头入局AI应用市场：字节跳动与Instagram崛起，「场景+AI」成竞争新焦点 分类： 市场分析 来源： DataEye游戏观察 核心洞察： AI应用市场正经历一...",
+          "title": "🎮 游戏行业速递 - 2025年09月08日",
+          "summary": "🎮 游戏行业速递 2025年09月08日 平台巨头入局AI应用市场：字节跳动与Instagram崛起，「场景+AI」成竞争新焦点 分类： 市场分析 来源： DataEye游戏观察 核心洞察： AI应用市场正经历一场由内容平台巨头主导的竞争格...",
           "tags": [
             "Game",
             "Daily"
