--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1"
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
+    "github-markdown-css": "^5.2.0",
+    "highlight.js": "^11.9.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
