docs(content): Update GAME daily report for 2025-09-10

--- a/manifest.json
+++ b/manifest.json
@@ -9,26 +9,22 @@
     "game": "游戏日报"
   },
   "months": {
-    "ai": {
-      "2025-09": [
-        {
-          "date": "2025-09-03",
-          "title": "AI 日报 · 2025-09-03",
-          "summary": "…",
-          "tags": [
-            "AI",
-            "Daily"
-          ],
-          "url": "ai/2025/09/03.md"
-        }
-      ]
-    },
     "game": {
       "2025-09": [
         {
-          "date": "2025-09-09",
+          "date": "2025-09-10",
           "title": "🎮 游戏行业速递 - 2025年09月09日",
           "summary": "🎮 游戏行业速递 2025年09月09日 《空洞骑士：丝之歌》：全球爆火与中文本地化危机的双面镜像 分类： 产品情报 来源： GameLook 、 GameRes游资网 核心洞察： 《丝之歌》的双面镜像现象揭示了全球化游戏发行中的关键矛盾：...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/10.md"
+        },
+        {
+          "date": "2025-09-09",
+          "title": "游戏行业速递 - 2025年09月09日",
+          "summary": "",
           "tags": [
             "Game",
             "Daily"
@@ -37,24 +33,16 @@
         },
         {
           "date": "2025-09-08",
-          "title": "🎮 游戏行业速递 - 2025年09月08日",
-          "summary": "🎮 游戏行业速递 2025年09月08日 平台巨头入局AI应用市场：字节跳动与Instagram崛起，「场景+AI」成竞争新焦点 分类： 市场分析 来源： DataEye游戏观察 核心洞察： AI应用市场正经历一场由内容平台巨头主导的竞争格...",
+          "title": "游戏行业速递 - 2025年09月08日",
+          "summary": "",
           "tags": [
             "Game",
             "Daily"
           ],
           "url": "game/2025/09/08.md"
-        },
-        {
-          "date": "2025-09-03",
-          "title": "游戏日报 · 2025-09-03",
-          "summary": "…",
-          "tags": [
-            "Game"
-          ],
-          "url": "game/2025/09/03.md"
         }
       ]
-    }
+    },
+    "ai": {}
   }
 }
