--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "node scripts/generate-manifest.mjs && next dev --turbopack",
+    "build": "node scripts/generate-manifest.mjs && next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
