--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-09",
+          "title": "🎮 游戏行业速递 - 2025年09月09日",
+          "summary": "🎮 游戏行业速递 2025年09月09日 《空洞骑士：丝之歌》：全球爆火与中文本地化危机的双面镜像 分类： 产品情报 来源： GameLook 、 GameRes游资网 核心洞察： 《丝之歌》的双面镜像现象揭示了全球化游戏发行中的关键矛盾：...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/09.md"
+        },
+        {
           "date": "2025-09-10",
           "title": "🎮 游戏行业速递 - 2025年09月09日",
           "summary": "🎮 游戏行业速递 2025年09月09日 《空洞骑士：丝之歌》：全球爆火与中文本地化危机的双面镜像 分类： 产品情报 来源： GameLook 、 GameRes游资网 核心洞察： 《丝之歌》的双面镜像现象揭示了全球化游戏发行中的关键矛盾：...",
@@ -20,16 +30,6 @@
             "Daily"
           ],
           "url": "game/2025/09/10.md"
-        },
-        {
-          "date": "2025-09-09",
-          "title": "游戏行业速递 - 2025年09月09日",
-          "summary": "",
-          "tags": [
-            "Game",
-            "Daily"
-          ],
-          "url": "game/2025/09/09.md"
         },
         {
           "date": "2025-09-08",
