--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-12",
+          "title": "🎮 游戏行业速递 - 2025年09月12日",
+          "summary": "🎮 游戏行业速递 2025年09月12日 《明日方舟：终末地》登苹果发布会：鹰角网络全球化战略与平台认可的双重里程碑 分类： 产品情报 来源： GameLook 、 游戏葡萄 核心洞察： 鹰角网络将《明日方舟：终末地》带上苹果全球发布会，揭...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/12.md"
+        },
+        {
           "date": "2025-09-10",
           "title": "🎮 游戏行业速递 - 2025年09月10日",
           "summary": "🎮 游戏行业速递 2025年09月10日 Steam发行新游戏策略解析：Demo已成为成功的关键流量入口 分类： 市场分析 来源： GameLook 核心洞察： Steam平台已从「游戏发行渠道」转变为「游戏发现引擎」，其算法核心正从「愿望...",
