--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-11",
+          "title": "🎮 游戏行业速递 - 2025年09月11日",
+          "summary": "🎮 游戏行业速递 2025年09月11日 《明日方舟：终末地》登苹果发布会：鹰角网络全球化战略与平台认可的双重里程碑 分类： 产品情报 来源： GameLook 、 游戏葡萄 核心洞察： 鹰角网络将《明日方舟：终末地》带上苹果全球发布会，揭...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/11.md"
+        },
+        {
           "date": "2025-09-12",
           "title": "🎮 游戏行业速递 - 2025年09月12日",
           "summary": "🎮 游戏行业速递 2025年09月12日 《明日方舟：终末地》登苹果发布会：鹰角网络全球化战略与平台认可的双重里程碑 分类： 产品情报 来源： GameLook 、 游戏葡萄 核心洞察： 鹰角网络将《明日方舟：终末地》带上苹果全球发布会，揭...",
