--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,22 +9,13 @@
     "game": "游戏日报"
   },
   "months": {
+    "ai": {},
     "game": {
       "2025-09": [
         {
-          "date": "2025-09-11",
-          "title": "🎮 游戏行业速递 - 2025年09月11日",
-          "summary": "🎮 游戏行业速递 2025年09月11日 《明日方舟：终末地》登苹果发布会：鹰角网络全球化战略与平台认可的双重里程碑 分类： 产品情报 来源： GameLook 、 游戏葡萄 核心洞察： 鹰角网络将《明日方舟：终末地》带上苹果全球发布会，揭...",
-          "tags": [
-            "Game",
-            "Daily"
-          ],
-          "url": "game/2025/09/11.md"
-        },
-        {
           "date": "2025-09-12",
           "title": "🎮 游戏行业速递 - 2025年09月12日",
-          "summary": "🎮 游戏行业速递 2025年09月12日 《明日方舟：终末地》登苹果发布会：鹰角网络全球化战略与平台认可的双重里程碑 分类： 产品情报 来源： GameLook 、 游戏葡萄 核心洞察： 鹰角网络将《明日方舟：终末地》带上苹果全球发布会，揭...",
+          "summary": "核心洞察： 鹰角网络将《明日方舟：终末地》带上苹果全球发布会，揭示了中国游戏厂商全球化进程中的关键转变：从单纯依靠产品口碑崛起，到获得国际科技平台的高级别背书。这一战略突破体现了「技术+品牌」双轮驱动的出海新模式，一方面通过与科技巨头深度合作获得国际曝光和技术加持，另一方面通过IP延展与跨平台同发策略拓展用户群体。作为",
           "tags": [
             "Game",
             "Daily"
@@ -32,9 +23,19 @@
           "url": "game/2025/09/12.md"
         },
         {
+          "date": "2025-09-11",
+          "title": "🎮 游戏行业速递 - 2025年09月11日",
+          "summary": "核心洞察： 鹰角网络将《明日方舟：终末地》带上苹果全球发布会，揭示了中国游戏厂商全球化进程中的关键转变：从单纯依靠产品口碑崛起，到获得国际科技平台的高级别背书。这一战略突破体现了「技术+品牌」双轮驱动的出海新模式，一方面通过与科技巨头深度合作获得国际曝光和技术加持，另一方面通过IP延展与跨平台同发策略拓展用户群体。作为",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/11.md"
+        },
+        {
           "date": "2025-09-10",
           "title": "🎮 游戏行业速递 - 2025年09月10日",
-          "summary": "🎮 游戏行业速递 2025年09月10日 Steam发行新游戏策略解析：Demo已成为成功的关键流量入口 分类： 市场分析 来源： GameLook 核心洞察： Steam平台已从「游戏发行渠道」转变为「游戏发现引擎」，其算法核心正从「愿望...",
+          "summary": "核心洞察： Steam平台已从「游戏发行渠道」转变为「游戏发现引擎」，其算法核心正从「愿望单数量」向「玩家实际互动」倾斜。Demo不再是简单的试玩工具，而是成为独立开发者突破市场噪音的「流量核弹」，直接影响算法推荐、首页曝光和节日活动参与资格。这种机制变革反映了平台对「先玩后爱」互动逻辑的认可，也为中小开发者提供了一条",
           "tags": [
             "Game",
             "Daily"
@@ -44,7 +45,7 @@
         {
           "date": "2025-09-09",
           "title": "🎮 游戏行业速递 - 2025年09月09日",
-          "summary": "🎮 游戏行业速递 2025年09月09日 《空洞骑士：丝之歌》：全球爆火与中文本地化危机的双面镜像 分类： 产品情报 来源： GameLook 、 GameRes游资网 核心洞察： 《丝之歌》的双面镜像现象揭示了全球化游戏发行中的关键矛盾：...",
+          "summary": "核心洞察： 《丝之歌》的双面镜像现象揭示了全球化游戏发行中的关键矛盾：一款游戏可以凭借出色的核心品质和营销策略在全球范围内取得巨大成功，却可能因本地化不当在特定市场遭遇滑铁卢。这一事件提醒开发商，随着中国游戏市场的日益重要，本地化不再是发行流程中的可选环节，而应成为产品战略的核心组成部分。对独立游戏开发者而言，《空洞骑",
           "tags": [
             "Game",
             "Daily"
@@ -54,7 +55,7 @@
         {
           "date": "2025-09-08",
           "title": "游戏行业速递 - 2025年09月08日",
-          "summary": "",
+          "summary": "平台巨头加速入局AI应用，场景+AI成为竞争焦点；生态与分发格局重塑中，内容效率与用户增长呈现新范式，市场观察与产品策略需要同步升级。",
           "tags": [
             "Game",
             "Daily"
@@ -62,7 +63,6 @@
           "url": "game/2025/09/08.md"
         }
       ]
-    },
-    "ai": {}
+    }
   }
 }
