feat: split routes for /ai and /game; respect cat from URL; clean eslint comment

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,12 +9,13 @@
     "game": "游戏日报"
   },
   "months": {
+    "ai": {},
     "game": {
       "2025-09": [
         {
           "date": "2025-09-12",
           "title": "🎮 游戏行业速递 - 2025年09月12日",
-          "summary": "🎮 游戏行业速递 2025年09月12日 Roblox的双面困境：市值暴涨近千亿美元，同时28万家长联名要求CEO下台 分类： 公司动态 日期： 2025年09月12日 来源： GameLook 核心洞察： Roblox的困境揭示了快速增长...",
+          "summary": "核心洞察： Roblox的困境揭示了快速增长的数字平台面临的核心矛盾：商业成功与用户安全保障之间的平衡。当平台以青少年为主要用户群体时，这一矛盾尤为尖锐。Roblox的案例表明，即使在资本市场取得辉煌成就，忽视用户安全和信任建设最终可能引发品牌危机，而这种危机一旦爆发，将远比财务指标更难以修复。对整个行业的启示在于，面",
           "tags": [
             "Game",
             "Daily"
@@ -24,7 +25,7 @@
         {
           "date": "2025-09-11",
           "title": "🎮 游戏行业速递 - 2025年09月11日",
-          "summary": "🎮 游戏行业速递 2025年09月11日 《明日方舟：终末地》登苹果发布会：鹰角网络全球化战略与平台认可的双重里程碑 分类： 产品情报 来源： GameLook 、 游戏葡萄 核心洞察： 鹰角网络将《明日方舟：终末地》带上苹果全球发布会，揭...",
+          "summary": "核心洞察： 鹰角网络将《明日方舟：终末地》带上苹果全球发布会，揭示了中国游戏厂商全球化进程中的关键转变：从单纯依靠产品口碑崛起，到获得国际科技平台的高级别背书。这一战略突破体现了「技术+品牌」双轮驱动的出海新模式，一方面通过与科技巨头深度合作获得国际曝光和技术加持，另一方面通过IP延展与跨平台同发策略拓展用户群体。作为",
           "tags": [
             "Game",
             "Daily"
@@ -34,7 +35,7 @@
         {
           "date": "2025-09-10",
           "title": "🎮 游戏行业速递 - 2025年09月10日",
-          "summary": "🎮 游戏行业速递 2025年09月10日 Steam发行新游戏策略解析：Demo已成为成功的关键流量入口 分类： 市场分析 来源： GameLook 核心洞察： Steam平台已从「游戏发行渠道」转变为「游戏发现引擎」，其算法核心正从「愿望...",
+          "summary": "核心洞察： Steam平台已从「游戏发行渠道」转变为「游戏发现引擎」，其算法核心正从「愿望单数量」向「玩家实际互动」倾斜。Demo不再是简单的试玩工具，而是成为独立开发者突破市场噪音的「流量核弹」，直接影响算法推荐、首页曝光和节日活动参与资格。这种机制变革反映了平台对「先玩后爱」互动逻辑的认可，也为中小开发者提供了一条",
           "tags": [
             "Game",
             "Daily"
@@ -44,7 +45,7 @@
         {
           "date": "2025-09-09",
           "title": "🎮 游戏行业速递 - 2025年09月09日",
-          "summary": "🎮 游戏行业速递 2025年09月09日 《空洞骑士：丝之歌》：全球爆火与中文本地化危机的双面镜像 分类： 产品情报 来源： GameLook 、 GameRes游资网 核心洞察： 《丝之歌》的双面镜像现象揭示了全球化游戏发行中的关键矛盾：...",
+          "summary": "核心洞察： 《丝之歌》的双面镜像现象揭示了全球化游戏发行中的关键矛盾：一款游戏可以凭借出色的核心品质和营销策略在全球范围内取得巨大成功，却可能因本地化不当在特定市场遭遇滑铁卢。这一事件提醒开发商，随着中国游戏市场的日益重要，本地化不再是发行流程中的可选环节，而应成为产品战略的核心组成部分。对独立游戏开发者而言，《空洞骑",
           "tags": [
             "Game",
             "Daily"
@@ -53,8 +54,8 @@
         },
         {
           "date": "2025-09-08",
-          "title": "游戏行业速递 - 2025年09月08日",
-          "summary": "",
+          "title": "🎮 游戏行业速递 - 2025年09月08日",
+          "summary": "核心洞察： AI应用市场正经历一场由内容平台巨头主导的竞争格局重塑：从「专业工具」向「平台集成」快速过渡。字节跳动和Instagram的成功表明，将AI功能无缝嵌入用户已熟悉的平台生态，比独立推出AI应用更容易获得规模化用户采用。这种「场景+AI」融合模式的崛起，不仅挑战了传统AI工具提供商的地位，也为游戏行业提供了重",
           "tags": [
             "Game",
             "Daily"
@@ -62,7 +63,6 @@
           "url": "game/2025/09/08.md"
         }
       ]
-    },
-    "ai": {}
+    }
   }
 }
