docs(content): Update GAME daily report for 2025-09-15

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-15",
+          "title": "🎮 游戏行业速递 - 2025年09月15日",
+          "summary": "🎮 游戏行业速递 2025年09月15日 《三国志·战略版》六周年：一亿现金打金服与GvG体验革新，SLG长青之道的系统性解决方案 分类： 产品情报 来源： 游戏陀螺 、 触乐 核心洞察： 《三国志·战略版》六周年战略揭示了SLG品类长线运...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/15.md"
+        },
+        {
           "date": "2025-09-12",
           "title": "🎮 游戏行业速递 - 2025年09月12日",
           "summary": "🎮 游戏行业速递 2025年09月12日 Roblox的双面困境：市值暴涨近千亿美元，同时28万家长联名要求CEO下台 分类： 公司动态 日期： 2025年09月12日 来源： GameLook 核心洞察： Roblox的困境揭示了快速增长...",
