--- a/public/manifest.json
+++ b/public/manifest.json
@@ -73,6 +73,19 @@
         }
       ]
     },
-    "ai": {}
+    "ai": {
+      "2025-09": [
+        {
+          "date": "2025-09-16",
+          "title": "🤖 AI行业速递 - 2025年09月16日",
+          "summary": "🤖 AI行业速递 2025年09月16日 GPT 5 Codex：从辅助编码到自主开发的里程碑，支持7小时连续工作与动态思考机制 分类： 产品与商业模式 来源： 赛博禅心 、 机器之心 核心洞察： GPT 5 Codex的发布标志着AI编程...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/09/16.md"
+        }
+      ]
+    }
   }
 }
