--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-16",
+          "title": "🎮 游戏行业速递 - 2025年09月16日",
+          "summary": "🎮 游戏行业速递 2025年09月16日 《无尽冬日》与《Gossip Harbor》：14亿增长背后的Live Ops成功密码 分类： 市场分析 来源： 游戏那点事Gamez 核心洞察： 游戏运营已从单纯的内容更新转变为系统化的「Live...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/16.md"
+        },
+        {
           "date": "2025-09-15",
           "title": "🎮 游戏行业速递 - 2025年09月15日",
           "summary": "🎮 游戏行业速递 2025年09月15日 《三国志·战略版》六周年：一亿现金打金服与GvG体验革新，SLG长青之道的系统性解决方案 分类： 产品情报 来源： 游戏陀螺 、 触乐 核心洞察： 《三国志·战略版》六周年战略揭示了SLG品类长线运...",
