docs(content): Update GAME daily report for 2025-09-17

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-17",
+          "title": "🎮 游戏行业速递 - 2025年09月17日",
+          "summary": "🎮 游戏行业速递 2025年09月17日 《雾影猎人》：字节跳动70人团队的差异化突围，以ARPG创新搜打撤红海 分类： 产品情报 来源： 游戏那点事Gamez 、 触乐 核心洞察： 《雾影猎人》的开发历程揭示了在竞争激烈的搜打撤赛道中，差...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/17.md"
+        },
+        {
           "date": "2025-09-16",
           "title": "🎮 游戏行业速递 - 2025年09月16日",
           "summary": "🎮 游戏行业速递 2025年09月16日 《无尽冬日》与《Gossip Harbor》：14亿增长背后的Live Ops成功密码 分类： 市场分析 来源： 游戏那点事Gamez 核心洞察： 游戏运营已从单纯的内容更新转变为系统化的「Live...",
