docs(content): Update AI daily report for 2025-09-17

--- a/manifest.json
+++ b/manifest.json
@@ -96,6 +96,16 @@
     "ai": {
       "2025-09": [
         {
+          "date": "2025-09-17",
+          "title": "🤖 AI行业速递 - 2025年09月17日",
+          "summary": "🤖 AI行业速递 2025年09月17日 GPT 5 Codex发布：OpenAI打造工程智能体，动态资源调整与7小时连续编程能力重塑开发工作流 分类： 产品与商业模式 来源： 卡尔的霍格沃茨 、 夕小瑶科技说 、 Founder Park...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/09/17.md"
+        },
+        {
           "date": "2025-09-16",
           "title": "🤖 AI行业速递 - 2025年09月16日",
           "summary": "🤖 AI行业速递 2025年09月16日 GPT 5 Codex：从辅助编码到自主开发的里程碑，支持7小时连续工作与动态思考机制 分类： 产品与商业模式 来源： 赛博禅心 、 机器之心 核心洞察： GPT 5 Codex的发布标志着AI编程...",
