--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-18",
+          "title": "🎮 游戏行业速递 - 2025年09月18日",
+          "summary": "🎮 游戏行业速递 2025年09月18日 《崩坏：因缘精灵》首测：米哈游跨品类融合的战略转型与商业模式创新 分类： 产品情报 来源： 游戏研究社 、 游戏那点事Gamez 、 游戏葡萄 核心洞察： 《崩坏：因缘精灵》展现了米哈游在成熟市场中...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/18.md"
+        },
+        {
           "date": "2025-09-17",
           "title": "🎮 游戏行业速递 - 2025年09月17日",
           "summary": "🎮 游戏行业速递 2025年09月17日 《雾影猎人》：字节跳动70人团队的差异化突围，以ARPG创新搜打撤红海 分类： 产品情报 来源： 游戏那点事Gamez 、 触乐 核心洞察： 《雾影猎人》的开发历程揭示了在竞争激烈的搜打撤赛道中，差...",
