--- a/public/manifest.json
+++ b/public/manifest.json
@@ -106,6 +106,16 @@
     "ai": {
       "2025-09": [
         {
+          "date": "2025-09-18",
+          "title": "🤖 AI行业速递 - 2025年09月18日",
+          "summary": "🤖 AI行业速递 2025年09月18日 谷歌AP2协议：构建AI代理经济的支付与信任基础设施，打通商业闭环 分类： 产品与商业模式 来源： 歸藏的AI工具箱 、 机器之心 核心洞察： 谷歌AP2协议的推出标志着AI代理经济从「能力展示」阶...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/09/18.md"
+        },
+        {
           "date": "2025-09-17",
           "title": "🤖 AI行业速递 - 2025年09月17日",
           "summary": "🤖 AI行业速递 2025年09月17日 GPT 5 Codex发布：OpenAI打造工程智能体，动态资源调整与7小时连续编程能力重塑开发工作流 分类： 产品与商业模式 来源： 卡尔的霍格沃茨 、 夕小瑶科技说 、 Founder Park...",
