--- a/public/manifest.json
+++ b/public/manifest.json
@@ -106,6 +106,16 @@
     "ai": {
       "2025-09": [
         {
+          "date": "2025-09-19",
+          "title": "🤖 AI行业速递 - 2025年09月19日",
+          "summary": "🤖 AI行业速递 2025年09月19日 英伟达50亿美元战略入股英特尔：CPU与GPU融合计划背后的技术整合与地缘政治博弈 分类： 市场动态 来源： 机器之心 、 智能涌现 、 36氪 核心洞察： 英伟达与英特尔的这次战略联盟不仅是一次商...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/09/19.md"
+        },
+        {
           "date": "2025-09-18",
           "title": "🤖 AI行业速递 - 2025年09月18日",
           "summary": "🤖 AI行业速递 2025年09月18日 谷歌AP2协议：构建AI代理经济的支付与信任基础设施，打通商业闭环 分类： 产品与商业模式 来源： 歸藏的AI工具箱 、 机器之心 核心洞察： 谷歌AP2协议的推出标志着AI代理经济从「能力展示」阶...",
