--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-19",
+          "title": "🎮 游戏行业速递 - 2025年09月19日",
+          "summary": "🎮 游戏行业速递 2025年09月19日 《消逝的光芒：困兽》：回归初心与创新并举的IP复兴典范 分类： 产品情报 来源： IGN中国 、 二柄APP 、 游民星空 核心洞察： 《消逝的光芒：困兽》成功实现了「回归性创新」的产品策略，通过精...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/19.md"
+        },
+        {
           "date": "2025-09-18",
           "title": "🎮 游戏行业速递 - 2025年09月18日",
           "summary": "🎮 游戏行业速递 2025年09月18日 《崩坏：因缘精灵》首测：米哈游跨品类融合的战略转型与商业模式创新 分类： 产品情报 来源： 游戏研究社 、 游戏那点事Gamez 、 游戏葡萄 核心洞察： 《崩坏：因缘精灵》展现了米哈游在成熟市场中...",
