docs(content): Update GAME daily report for 2025-09-19

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         {
           "date": "2025-09-19",
           "title": "🎮 游戏行业速递 - 2025年09月19日",
-          "summary": "🎮 游戏行业速递 2025年09月19日 《消逝的光芒：困兽》：回归初心与创新并举的IP复兴典范 分类： 产品情报 来源： IGN中国 、 二柄APP 、 游民星空 核心洞察： 《消逝的光芒：困兽》成功实现了「回归性创新」的产品策略，通过精...",
+          "summary": "🎮 游戏行业速递 2025年09月19日 《消逝的光芒：困兽》：系列回归初心与创新并行，丧尸生存游戏的自我修正之路 分类： 产品情报 来源： IGN中国 、 二柄APP 核心洞察： 《消逝的光芒：困兽》展现了成熟游戏IP如何通过「回归初心」...",
           "tags": [
             "Game",
             "Daily"
