--- a/public/manifest.json
+++ b/public/manifest.json
@@ -116,6 +116,16 @@
     "ai": {
       "2025-09": [
         {
+          "date": "2025-09-22",
+          "title": "🤖 AI行业速递 - 2025年09月22日",
+          "summary": "🤖 AI行业速递 2025年09月22日 华为云超节点升级：从8192卡算力到Token服务，重构AI基础设施范式与商业模式 分类： 技术前沿解读 来源： 36氪 、 机器之心 、 量子位 核心洞察： 华为云超节点的升级战略揭示了AI基础设...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/09/22.md"
+        },
+        {
           "date": "2025-09-19",
           "title": "🤖 AI行业速递 - 2025年09月19日",
           "summary": "🤖 AI行业速递 2025年09月19日 英伟达50亿美元战略入股英特尔：CPU与GPU融合计划背后的技术整合与地缘政治博弈 分类： 市场动态 来源： 机器之心 、 智能涌现 、 36氪 核心洞察： 英伟达与英特尔的这次战略联盟不仅是一次商...",
