--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-22",
+          "title": "🎮 游戏行业速递 - 2025年09月22日",
+          "summary": "🎮 游戏行业速递 2025年09月22日 《三国：谋定天下》一周年：B站如何通过降肝减负革命与玩家共建重塑SLG品类 分类： 产品情报 来源： 游民星空 、 游戏那点事Gamez 、 游戏葡萄 核心洞察： 《三国：谋定天下》的成功揭示了成熟...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/22.md"
+        },
+        {
           "date": "2025-09-19",
           "title": "🎮 游戏行业速递 - 2025年09月19日",
           "summary": "🎮 游戏行业速递 2025年09月19日 《消逝的光芒：困兽》：系列回归初心与创新并行，丧尸生存游戏的自我修正之路 分类： 产品情报 来源： IGN中国 、 二柄APP 核心洞察： 《消逝的光芒：困兽》展现了成熟游戏IP如何通过「回归初心」...",
