docs(content): Update AI daily report for 2025-09-23

--- a/manifest.json
+++ b/manifest.json
@@ -126,6 +126,16 @@
     "ai": {
       "2025-09": [
         {
+          "date": "2025-09-23",
+          "title": "🤖 AI行业速递 - 2025年09月23日",
+          "summary": "🤖 AI行业速递 2025年09月23日 英伟达1000亿美元投资OpenAI：10吉瓦超级AI基础设施与产业链资本算力循环战略 分类： 市场动态 来源： 量子位 、 36氪 、 有机大橘子 、 机器之心 核心洞察： 英伟达与OpenAI的...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/09/23.md"
+        },
+        {
           "date": "2025-09-22",
           "title": "🤖 AI行业速递 - 2025年09月22日",
           "summary": "🤖 AI行业速递 2025年09月22日 华为云超节点升级：从8192卡算力到Token服务，重构AI基础设施范式与商业模式 分类： 技术前沿解读 来源： 36氪 、 机器之心 、 量子位 核心洞察： 华为云超节点的升级战略揭示了AI基础设...",
