docs(content): Update GAME daily report for 2025-09-23

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-23",
+          "title": "🎮 游戏行业速递 - 2025年09月23日",
+          "summary": "🎮 游戏行业速递 2025年09月23日 《消逝的光芒：困兽》：IP回归初心与全球化赋能的双重成功 分类： 产品情报 来源： GameLook 、 游民星空 核心洞察： 《消逝的光芒：困兽》的成功揭示了两个关键价值点：一是「IP回归初心」的...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/23.md"
+        },
+        {
           "date": "2025-09-22",
           "title": "🎮 游戏行业速递 - 2025年09月22日",
           "summary": "🎮 游戏行业速递 2025年09月22日 《三国：谋定天下》一周年：B站如何通过降肝减负革命与玩家共建重塑SLG品类 分类： 产品情报 来源： 游民星空 、 游戏那点事Gamez 、 游戏葡萄 核心洞察： 《三国：谋定天下》的成功揭示了成熟...",
