--- a/public/manifest.json
+++ b/public/manifest.json
@@ -136,6 +136,16 @@
     "ai": {
       "2025-09": [
         {
+          "date": "2025-09-24",
+          "title": "🤖 AI行业速递 - 2025年09月24日",
+          "summary": "🤖 AI行业速递 2025年09月24日 OpenAI「星际之门」计划：英伟达1000亿美元投资加持，与甲骨文、软银共建10GW超级算力生态 分类： 市场动态 来源： 量子位 、 极客公园 、 腾讯研究院 、 36氪 、 歸藏的AI工具箱 ...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/09/24.md"
+        },
+        {
           "date": "2025-09-23",
           "title": "🤖 AI行业速递 - 2025年09月23日",
           "summary": "🤖 AI行业速递 2025年09月23日 英伟达1000亿美元投资OpenAI：10吉瓦超级AI基础设施与产业链资本算力循环战略 分类： 市场动态 来源： 量子位 、 36氪 、 有机大橘子 、 机器之心 核心洞察： 英伟达与OpenAI的...",
