--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-24",
+          "title": "🎮 游戏行业速递 - 2025年09月24日",
+          "summary": "🎮 游戏行业速递 2025年09月24日 《无限大》：网易雷火颠覆二游传统，打造3A级开放世界都市生态系统 分类： 产品情报 来源： GameLook 、 游戏茶馆 、 游戏那点事Gamez 、 游戏葡萄 核心洞察： 《无限大》代表了二次元...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/24.md"
+        },
+        {
           "date": "2025-09-23",
           "title": "🎮 游戏行业速递 - 2025年09月23日",
           "summary": "🎮 游戏行业速递 2025年09月23日 《消逝的光芒：困兽》：IP回归初心与全球化赋能的双重成功 分类： 产品情报 来源： GameLook 、 游民星空 核心洞察： 《消逝的光芒：困兽》的成功揭示了两个关键价值点：一是「IP回归初心」的...",
