docs(content): Update AI daily report for 2025-09-25

--- a/manifest.json
+++ b/manifest.json
@@ -146,6 +146,16 @@
     "ai": {
       "2025-09": [
         {
+          "date": "2025-09-25",
+          "title": "🤖 AI行业速递 - 2025年09月25日",
+          "summary": "🤖 AI行业速递 2025年09月25日 阿里巴巴「超级智能」战略全解析：530亿美元押注ASI未来，从开源模型到全栈AI基础设施的产业布局 分类： 深度行业分析 来源： 极客公园 、 特工宇宙 、 智能涌现 、 夕小瑶科技说 、 赛博禅心...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/09/25.md"
+        },
+        {
           "date": "2025-09-24",
           "title": "🤖 AI行业速递 - 2025年09月24日",
           "summary": "🤖 AI行业速递 2025年09月24日 OpenAI「星际之门」计划：英伟达1000亿美元投资加持，与甲骨文、软银共建10GW超级算力生态 分类： 市场动态 来源： 量子位 、 极客公园 、 腾讯研究院 、 36氪 、 歸藏的AI工具箱 ...",
