docs(content): Update GAME daily report for 2025-09-25

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-25",
+          "title": "🎮 游戏行业速递 - 2025年09月25日",
+          "summary": "🎮 游戏行业速递 2025年09月25日 《粒粒的小人国》：腾讯银之心工作室打造的微观视角生活模拟游戏，重构情感连接与社交体验 分类： 产品情报 来源： IGN中国 、 触乐 、 游戏茶馆 、 游戏新知 、 游戏那点事Gamez 核心洞察：...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/25.md"
+        },
+        {
           "date": "2025-09-24",
           "title": "🎮 游戏行业速递 - 2025年09月24日",
           "summary": "🎮 游戏行业速递 2025年09月24日 《无限大》：网易雷火颠覆二游传统，打造3A级开放世界都市生态系统 分类： 产品情报 来源： GameLook 、 游戏茶馆 、 游戏那点事Gamez 、 游戏葡萄 核心洞察： 《无限大》代表了二次元...",
