docs(content): Update AI daily report for 2025-09-26

--- a/manifest.json
+++ b/manifest.json
@@ -156,6 +156,16 @@
     "ai": {
       "2025-09": [
         {
+          "date": "2025-09-26",
+          "title": "🤖 AI行业速递 - 2025年09月26日",
+          "summary": "🤖 AI行业速递 2025年09月26日 京东全栈AI开源战略：从供应链实战验证到企业级落地生态构建 分类： 深度行业分析 来源： 量子位 、 36氪 核心洞察： 京东的全栈AI开源战略标志着企业级AI正从「技术展示」阶段迈向「工程落地」阶...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/09/26.md"
+        },
+        {
           "date": "2025-09-25",
           "title": "🤖 AI行业速递 - 2025年09月25日",
           "summary": "🤖 AI行业速递 2025年09月25日 阿里巴巴「超级智能」战略全解析：530亿美元押注ASI未来，从开源模型到全栈AI基础设施的产业布局 分类： 深度行业分析 来源： 极客公园 、 特工宇宙 、 智能涌现 、 夕小瑶科技说 、 赛博禅心...",
