docs(content): Update GAME daily report for 2025-09-26

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-26",
+          "title": "🎮 游戏行业速递 - 2025年09月26日",
+          "summary": "🎮 游戏行业速递 2025年09月26日 《无限大》TGS亮相：网易港式动作开放世界新作的商业模式革新与技术突破 分类： 产品情报 来源： 游戏葡萄 、 二柄APP 、 游戏新知 核心洞察： 《无限大》代表了中国游戏厂商在开放世界领域从追随...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/26.md"
+        },
+        {
           "date": "2025-09-25",
           "title": "🎮 游戏行业速递 - 2025年09月25日",
           "summary": "🎮 游戏行业速递 2025年09月25日 《粒粒的小人国》：腾讯银之心工作室打造的微观视角生活模拟游戏，重构情感连接与社交体验 分类： 产品情报 来源： IGN中国 、 触乐 、 游戏茶馆 、 游戏新知 、 游戏那点事Gamez 核心洞察：...",
