docs(content): Update AI daily report for 2025-09-28

--- a/manifest.json
+++ b/manifest.json
@@ -166,6 +166,16 @@
     "ai": {
       "2025-09": [
         {
+          "date": "2025-09-28",
+          "title": "🤖 AI行业速递 - 2025年09月28日",
+          "summary": "🤖 AI行业速递 2025年09月28日 AI基础设施双轨进化：谷歌Gemini Robotics 1.5实现跨平台技能迁移，FlagOS 1.5打破硬件生态割裂 分类： 产品与商业模式 来源： 36氪 、 量子位 核心洞察： AI基础设施...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/09/28.md"
+        },
+        {
           "date": "2025-09-26",
           "title": "🤖 AI行业速递 - 2025年09月26日",
           "summary": "🤖 AI行业速递 2025年09月26日 京东全栈AI开源战略：从供应链实战验证到企业级落地生态构建 分类： 深度行业分析 来源： 量子位 、 36氪 核心洞察： 京东的全栈AI开源战略标志着企业级AI正从「技术展示」阶段迈向「工程落地」阶...",
