docs(content): Update GAME daily report for 2025-09-28

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-28",
+          "title": "🎮 游戏行业速递 - 2025年09月28日",
+          "summary": "🎮 游戏行业速递 2025年09月28日 《无限大》：网易雷火700人团队打造的无抽卡开放世界游戏，二次元商业模式的革命性转型 分类： 产品情报 来源： 游戏茶馆 、 游戏新知 核心洞察： 《无限大》代表了网易雷火对二次元游戏商业模式的根本...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/28.md"
+        },
+        {
           "date": "2025-09-26",
           "title": "🎮 游戏行业速递 - 2025年09月26日",
           "summary": "🎮 游戏行业速递 2025年09月26日 《无限大》TGS亮相：网易港式动作开放世界新作的商业模式革新与技术突破 分类： 产品情报 来源： 游戏葡萄 、 二柄APP 、 游戏新知 核心洞察： 《无限大》代表了中国游戏厂商在开放世界领域从追随...",
