--- a/public/manifest.json
+++ b/public/manifest.json
@@ -176,6 +176,16 @@
     "ai": {
       "2025-09": [
         {
+          "date": "2025-09-29",
+          "title": "🤖 AI行业速递 - 2025年09月29日",
+          "summary": "🤖 AI行业速递 2025年09月29日 腾讯双管齐下：混元图像3.0与TencentARC 3.0展现中国AIGC的专业化与本土化战略 分类： 产品与商业模式 来源： 卡尔的霍格沃茨 、 歸藏的AI工具箱 核心洞察： 腾讯通过混元图像3....",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/09/29.md"
+        },
+        {
           "date": "2025-09-28",
           "title": "🤖 AI行业速递 - 2025年09月28日",
           "summary": "🤖 AI行业速递 2025年09月28日 AI基础设施双轨进化：谷歌Gemini Robotics 1.5实现跨平台技能迁移，FlagOS 1.5打破硬件生态割裂 分类： 产品与商业模式 来源： 36氪 、 量子位 核心洞察： AI基础设施...",
