docs(content): Update GAME daily report for 2025-09-29

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-29",
+          "title": "🎮 游戏行业速递 - 2025年09月29日",
+          "summary": "🎮 游戏行业速递 2025年09月29日 OpenAI隐秘路由机制风波：安全监管与用户自主权的尖锐冲突 分类： 产品情报 来源： 数字生命卡兹克 、 机器之心 核心洞察： OpenAI的隐秘路由机制事件揭示了AI服务提供商面临的核心矛盾：安...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/29.md"
+        },
+        {
           "date": "2025-09-28",
           "title": "🎮 游戏行业速递 - 2025年09月28日",
           "summary": "🎮 游戏行业速递 2025年09月28日 《无限大》：网易雷火700人团队打造的无抽卡开放世界游戏，二次元商业模式的革命性转型 分类： 产品情报 来源： 游戏茶馆 、 游戏新知 核心洞察： 《无限大》代表了网易雷火对二次元游戏商业模式的根本...",
