docs(content): Update GAME daily report for 2025-09-30

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,16 @@
     "game": {
       "2025-09": [
         {
+          "date": "2025-09-30",
+          "title": "🎮 游戏行业速递 - 2025年09月30日",
+          "summary": "🎮 游戏行业速递 2025年09月30日 DeepSeek V3.2发布：稀疏注意力技术与TileLang国产GPU适配双管齐下，引领大模型效率革命 分类： 技术前沿 来源： 量子位 、 有机大橘子 、 机器之心 、 Founder Par...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/09/30.md"
+        },
+        {
           "date": "2025-09-29",
           "title": "🎮 游戏行业速递 - 2025年09月29日",
           "summary": "🎮 游戏行业速递 2025年09月29日 OpenAI隐秘路由机制风波：安全监管与用户自主权的尖锐冲突 分类： 产品情报 来源： 数字生命卡兹克 、 机器之心 核心洞察： OpenAI的隐秘路由机制事件揭示了AI服务提供商面临的核心矛盾：安...",
