--- a/public/manifest.json
+++ b/public/manifest.json
@@ -196,6 +196,16 @@
     "ai": {
       "2025-09": [
         {
+          "date": "2025-09-30",
+          "title": "🤖 AI行业速递 - 2025年09月30日",
+          "summary": "🤖 AI行业速递 2025年09月30日 Claude Sonnet 4.5发布：突破30小时自主编程能力，智能体SDK与开发者生态战略全面升级 分类： 产品与商业模式 来源： 量子位 、 机器之心 、 有机大橘子 、 赛博禅心 核心洞察：...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/09/30.md"
+        },
+        {
           "date": "2025-09-29",
           "title": "🤖 AI行业速递 - 2025年09月29日",
           "summary": "🤖 AI行业速递 2025年09月29日 腾讯双管齐下：混元图像3.0与TencentARC 3.0展现中国AIGC的专业化与本土化战略 分类： 产品与商业模式 来源： 卡尔的霍格沃茨 、 歸藏的AI工具箱 核心洞察： 腾讯通过混元图像3....",
