--- a/public/manifest.json
+++ b/public/manifest.json
@@ -315,6 +315,18 @@
           ],
           "url": "ai/2025/09/16.md"
         }
+      ],
+      "2025-10": [
+        {
+          "date": "2025-10-10",
+          "title": "🤖 AI行业速递 - 2025年10月10日",
+          "summary": "🤖 AI行业速递 2025年10月10日 Sam Altman 重新定义 OpenAI：从基础模型到 AI 超级系统的战略转型 分类： 观点洞察 来源： Founder Park 核心洞察： Sam Altman 的战略转向揭示了 AI 产...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/10.md"
+        }
       ]
     }
   }
