docs(content): Update GAME daily report for 2025-10-10

--- a/manifest.json
+++ b/manifest.json
@@ -191,6 +191,18 @@
           ],
           "url": "game/2025/09/08.md"
         }
+      ],
+      "2025-10": [
+        {
+          "date": "2025-10-10",
+          "title": "🎮 游戏行业速递 - 2025年10月10日",
+          "summary": "🎮 游戏行业速递 2025年10月10日 《我的花园世界》：5人小团队如何用重度商业化模式打造女性向爆款，实现低成本高回报的逆袭 分类： 产品情报 来源： GameLook 、 DataEye游戏观察 核心洞察： 《我的花园世界》的成功揭示...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/10.md"
+        }
       ]
     },
     "ai": {
