--- a/public/manifest.json
+++ b/public/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-11",
+          "title": "🎮 游戏行业速递 - 2025年10月11日",
+          "summary": "🎮 游戏行业速递 2025年10月11日 《鸣潮》2.7版本收官：从叙事突破到体验融合，库洛的影视化游戏叙事新标杆 分类： 产品情报 来源： 游戏动力 、 游戏那点事Gamez 、 游戏茶馆 核心洞察： 《鸣潮》2.7版本标志着库洛游戏在叙...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/11.md"
+        },
+        {
           "date": "2025-10-10",
           "title": "🎮 游戏行业速递 - 2025年10月10日",
           "summary": "🎮 游戏行业速递 2025年10月10日 《我的花园世界》：5人小团队如何用重度商业化模式打造女性向爆款，实现低成本高回报的逆袭 分类： 产品情报 来源： GameLook 、 DataEye游戏观察 核心洞察： 《我的花园世界》的成功揭示...",
