--- a/public/manifest.json
+++ b/public/manifest.json
@@ -340,6 +340,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-11",
+          "title": "🤖 AI行业速递 - 2025年10月11日",
+          "summary": "🤖 AI行业速递 2025年10月11日 大模型安全重大漏洞：仅需250份恶意文档即可植入后门，攻击效果与模型规模无关 分类： 技术前沿解读 来源： 量子位 、 机器之心 核心洞察： Anthropic的研究揭示了大模型安全领域一个颠覆性发...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/11.md"
+        },
+        {
           "date": "2025-10-10",
           "title": "🤖 AI行业速递 - 2025年10月10日",
           "summary": "🤖 AI行业速递 2025年10月10日 Sam Altman 重新定义 OpenAI：从基础模型到 AI 超级系统的战略转型 分类： 观点洞察 来源： Founder Park 核心洞察： Sam Altman 的战略转向揭示了 AI 产...",
