--- a/public/manifest.json
+++ b/public/manifest.json
@@ -340,6 +340,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-13",
+          "title": "🤖 AI行业速递 - 2025年10月13日",
+          "summary": "🤖 AI行业速递 2025年10月13日 ChatGPT内置应用战略：OpenAI从AI工具提供商向流量分发平台的关键转型 分类： 市场动态 来源： 36氪 、 AI产品榜 核心洞察： ChatGPT内置应用战略标志着AI商业模式的关键演进...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/13.md"
+        },
+        {
           "date": "2025-10-11",
           "title": "🤖 AI行业速递 - 2025年10月11日",
           "summary": "🤖 AI行业速递 2025年10月11日 大模型安全重大漏洞：仅需250份恶意文档即可植入后门，攻击效果与模型规模无关 分类： 技术前沿解读 来源： 量子位 、 机器之心 核心洞察： Anthropic的研究揭示了大模型安全领域一个颠覆性发...",
