--- a/public/manifest.json
+++ b/public/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-13",
+          "title": "🎮 游戏行业速递 - 2025年10月13日",
+          "summary": "🎮 游戏行业速递 2025年10月13日 《战地6》首日爆发：28亿研发投入换来口碑翻盘，EA收购后的救赎之作 分类： 产品情报 来源： 游戏葡萄 、 GameLook 、 游戏新知 、 游戏茶馆 核心洞察： 《战地6》的成功翻盘揭示了成熟...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/13.md"
+        },
+        {
           "date": "2025-10-11",
           "title": "🎮 游戏行业速递 - 2025年10月11日",
           "summary": "🎮 游戏行业速递 2025年10月11日 《鸣潮》2.7版本收官：从叙事突破到体验融合，库洛的影视化游戏叙事新标杆 分类： 产品情报 来源： 游戏动力 、 游戏那点事Gamez 、 游戏茶馆 核心洞察： 《鸣潮》2.7版本标志着库洛游戏在叙...",
