--- a/manifest.json
+++ b/manifest.json
@@ -350,6 +350,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-14",
+          "title": "🤖 AI行业速递 - 2025年10月14日",
+          "summary": "🤖 AI行业速递 2025年10月14日 OpenAI与博通战略合作：10吉瓦级AI芯片自研计划揭示大模型公司算力垂直整合新趋势 分类： 市场动态 来源： 极客公园 、 36氪 、 机器之心 、 腾讯研究院 核心洞察： OpenAI与博通的...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/14.md"
+        },
+        {
           "date": "2025-10-13",
           "title": "🤖 AI行业速递 - 2025年10月13日",
           "summary": "🤖 AI行业速递 2025年10月13日 ChatGPT内置应用战略：OpenAI从AI工具提供商向流量分发平台的关键转型 分类： 市场动态 来源： 36氪 、 AI产品榜 核心洞察： ChatGPT内置应用战略标志着AI商业模式的关键演进...",
