--- a/public/manifest.json
+++ b/public/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-15",
+          "title": "🎮 游戏行业速递 - 2025年10月15日",
+          "summary": "🎮 游戏行业速递 2025年10月15日 《羊蹄山之魂》：探索型开放世界的设计革新与精心引导的北国武士之旅 分类： 产品情报 来源： IGN中国 、 触乐 核心洞察： 《羊蹄山之魂》揭示了开放世界游戏设计的关键突破：成功不在于系统深度或世界...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/15.md"
+        },
+        {
           "date": "2025-10-14",
           "title": "🎮 游戏行业速递 - 2025年10月14日",
           "summary": "🎮 游戏行业速递 2025年10月14日 《潮汐守望者》周年战略转型：沐瞳从塔防到战术平台的品类突围与护城河构建 分类： 产品情报 来源： 游戏新知 、 游戏茶馆 核心洞察： 《潮汐守望者》的战略转型揭示了成熟游戏产品突破天花板的创新路径：...",
