--- a/public/manifest.json
+++ b/public/manifest.json
@@ -370,6 +370,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-16",
+          "title": "🤖 AI行业速递 - 2025年10月16日",
+          "summary": "🤖 AI行业速递 2025年10月16日",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/16.md"
+        },
+        {
           "date": "2025-10-15",
           "title": "🤖 AI行业速递 - 2025年10月15日",
           "summary": "🤖 AI行业速递 2025年10月15日 OpenAI芯片自研战略全解析：从垂直整合到持续计算，125倍算力扩张背后的技术与商业逻辑 分类： 市场动态 来源： 量子位 、 歸藏的AI工具箱 核心洞察： OpenAI的芯片自研与算力扩张战略揭...",
