docs(content): Update GAME daily report for 2025-10-16

--- a/manifest.json
+++ b/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-16",
+          "title": "🎮 游戏行业速递 - 2025年10月16日",
+          "summary": "🎮 游戏行业速递 2025年10月16日 《灰境行者》：腾讯北极光工作室的微恐PvEvP猎杀夺宝FPS新作，差异化突围射击游戏市场 分类： 产品情报 来源： GameLook 、 游戏新知 、 GameRes游资网 、 游戏那点事Gamez...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/16.md"
+        },
+        {
           "date": "2025-10-15",
           "title": "🎮 游戏行业速递 - 2025年10月15日",
           "summary": "🎮 游戏行业速递 2025年10月15日 《羊蹄山之魂》：探索型开放世界的设计革新与精心引导的北国武士之旅 分类： 产品情报 来源： IGN中国 、 触乐 核心洞察： 《羊蹄山之魂》揭示了开放世界游戏设计的关键突破：成功不在于系统深度或世界...",
