docs(content): Update AI daily report for 2025-10-16

--- a/manifest.json
+++ b/manifest.json
@@ -382,7 +382,7 @@
         {
           "date": "2025-10-16",
           "title": "🤖 AI行业速递 - 2025年10月16日",
-          "summary": "🤖 AI行业速递 2025年10月16日",
+          "summary": "🤖 AI行业速递 2025年10月16日 PaDT多模态大模型：颠覆「坐标猜测」范式，实现直接视觉令牌输出与精准空间定位 分类： 技术前沿解读 来源： 机器之心 核心洞察： PaDT范式的突破性在于重新定义了多模态大模型的输出机制，从「文本...",
           "tags": [
             "Ai",
             "Daily"
