docs(content): Update AI daily report for 2025-10-17

--- a/manifest.json
+++ b/manifest.json
@@ -390,6 +390,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-17",
+          "title": "🤖 AI行业速递 - 2025年10月17日",
+          "summary": "🤖 AI行业速递 2025年10月17日 Manus 1.5发布：从代码助手到全栈开发架构，微软战略合作彰显AI开发范式转变 分类： 产品与商业模式 来源： 特工宇宙 、 赛博禅心 核心洞察： Manus 1.5的发布标志着AI辅助开发工具...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/17.md"
+        },
+        {
           "date": "2025-10-16",
           "title": "🤖 AI行业速递 - 2025年10月16日",
           "summary": "🤖 AI行业速递 2025年10月16日 PaDT多模态大模型：颠覆「坐标猜测」范式，实现直接视觉令牌输出与精准空间定位 分类： 技术前沿解读 来源： 机器之心 核心洞察： PaDT范式的突破性在于重新定义了多模态大模型的输出机制，从「文本...",
