docs(content): Update GAME daily report for 2025-10-20

--- a/manifest.json
+++ b/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-20",
+          "title": "🎮 游戏行业速递 - 2025年10月20日",
+          "summary": "🎮 游戏行业速递 2025年10月20日 《文字游戏》：从汉字解谜创新到日语本地化奇迹，Team9的文化跨界之旅 分类： 产品情报 来源： 游戏研究社 、 触乐 核心洞察： 《文字游戏》系列的成功与其日语本地化的突破，揭示了两个关键行业趋势...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/20.md"
+        },
+        {
           "date": "2025-10-17",
           "title": "🎮 游戏行业速递 - 2025年10月17日",
           "summary": "🎮 游戏行业速递 2025年10月17日 《命运：群星》国服上线：网易七年打造PVE射击手游新赛道，开创行业差异化竞争 分类： 产品情报 来源： GameLook 、 游戏那点事Gamez 、 游戏葡萄 、 游戏陀螺 核心洞察： 《命运：群...",
