docs(content): Update AI daily report for 2025-10-20

--- a/manifest.json
+++ b/manifest.json
@@ -400,6 +400,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-20",
+          "title": "🤖 AI行业速递 - 2025年10月20日",
+          "summary": "🤖 AI行业速递 2025年10月20日 Claude Skills：Anthropic推出模块化技能架构，开创AI能力标准化与可组合生态系统 分类： 产品与商业模式 来源： 赛博禅心 、 有机大橘子 核心洞察： Claude Skills...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/20.md"
+        },
+        {
           "date": "2025-10-17",
           "title": "🤖 AI行业速递 - 2025年10月17日",
           "summary": "🤖 AI行业速递 2025年10月17日 Manus 1.5发布：从代码助手到全栈开发架构，微软战略合作彰显AI开发范式转变 分类： 产品与商业模式 来源： 特工宇宙 、 赛博禅心 核心洞察： Manus 1.5的发布标志着AI辅助开发工具...",
