docs(content): Update AI daily report for 2025-10-20

--- a/manifest.json
+++ b/manifest.json
@@ -402,7 +402,7 @@
         {
           "date": "2025-10-20",
           "title": "🤖 AI行业速递 - 2025年10月20日",
-          "summary": "🤖 AI行业速递 2025年10月20日 Claude Skills：Anthropic推出模块化技能架构，开创AI能力标准化与可组合生态系统 分类： 产品与商业模式 来源： 赛博禅心 、 有机大橘子 核心洞察： Claude Skills...",
+          "summary": "🤖 AI行业速递 2025年10月20日 Karpathy提出「智能遗忘」理论：完美记忆阻碍AI真智能，AGI发展需重思路 分类： 观点洞察 来源： 有机大橘子 、 机器之心 核心洞察： Karpathy的「智能遗忘」理论颠覆了当前AI发展...",
           "tags": [
             "Ai",
             "Daily"
