--- a/public/manifest.json
+++ b/public/manifest.json
@@ -410,6 +410,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-21",
+          "title": "🤖 AI行业速递 - 2025年10月21日",
+          "summary": "🤖 AI行业速递 2025年10月21日 DeepSeek OCR：用视觉压缩文本的突破性技术，借鉴人类记忆机制重新定义AI长文本处理 分类： 技术前沿解读 来源： 数字生命卡兹克 、 量子位 、 有机大橘子 、 赛博禅心 、 机器之心 核...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/21.md"
+        },
+        {
           "date": "2025-10-20",
           "title": "🤖 AI行业速递 - 2025年10月20日",
           "summary": "🤖 AI行业速递 2025年10月20日 Karpathy提出「智能遗忘」理论：完美记忆阻碍AI真智能，AGI发展需重思路 分类： 观点洞察 来源： 有机大橘子 、 机器之心 核心洞察： Karpathy的「智能遗忘」理论颠覆了当前AI发展...",
