--- a/public/manifest.json
+++ b/public/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-22",
+          "title": "🎮 游戏行业速递 - 2025年10月22日",
+          "summary": "🎮 游戏行业速递 2025年10月22日 2025中国移动游戏新格局：APP与小游戏双端协同，共创7亿用户市场与差异化竞争优势 分类： 市场分析 来源： 游戏陀螺 、 DataEye游戏观察 、 游戏葡萄 核心洞察： 中国移动游戏市场已从单...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/22.md"
+        },
+        {
           "date": "2025-10-21",
           "title": "🎮 游戏行业速递 - 2025年10月21日",
           "summary": "🎮 游戏行业速递 2025年10月21日 《逃离鸭科夫》：B站5人团队的轻量级PVE搜打撤游戏如何突围成爆款 分类： 产品情报 来源： GameLook 、 游戏那点事Gamez 、 游戏陀螺 核心洞察： 《逃离鸭科夫》的成功揭示了一个关键...",
