--- a/public/manifest.json
+++ b/public/manifest.json
@@ -420,6 +420,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-22",
+          "title": "🤖 AI行业速递 - 2025年10月22日",
+          "summary": "🤖 AI行业速递 2025年10月22日 OpenAI发布ChatGPT Atlas浏览器：Agent能力与传统搜索融合，重塑互联网入口与用户交互范式 分类： 产品与商业模式 来源： 极客公园 、 有机大橘子 、 夕小瑶科技说 、 机器之心...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/22.md"
+        },
+        {
           "date": "2025-10-21",
           "title": "🤖 AI行业速递 - 2025年10月21日",
           "summary": "🤖 AI行业速递 2025年10月21日 DeepSeek OCR：用视觉压缩文本的突破性技术，借鉴人类记忆机制重新定义AI长文本处理 分类： 技术前沿解读 来源： 数字生命卡兹克 、 量子位 、 有机大橘子 、 赛博禅心 、 机器之心 核...",
