--- a/public/manifest.json
+++ b/public/manifest.json
@@ -194,6 +194,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-23",
+          "title": "🎮 游戏行业速递 - 2025年10月23日",
+          "summary": "🎮 游戏行业速递 2025年10月23日 Steam市场两极分化危机：40%游戏收入不足上架费，5%头部游戏主导收益 分类： 市场分析 来源： GameLook 、 游戏陀螺 核心洞察： Steam平台的极端收入分化揭示了数字游戏分发的根本...",
+          "tags": [
+            "Game",
+            "Daily"
+          ],
+          "url": "game/2025/10/23.md"
+        },
+        {
           "date": "2025-10-22",
           "title": "🎮 游戏行业速递 - 2025年10月22日",
           "summary": "🎮 游戏行业速递 2025年10月22日 2025中国移动游戏新格局：APP与小游戏双端协同，共创7亿用户市场与差异化竞争优势 分类： 市场分析 来源： 游戏陀螺 、 DataEye游戏观察 、 游戏葡萄 核心洞察： 中国移动游戏市场已从单...",
