--- a/public/manifest.json
+++ b/public/manifest.json
@@ -430,6 +430,16 @@
       ],
       "2025-10": [
         {
+          "date": "2025-10-23",
+          "title": "🤖 AI行业速递 - 2025年10月23日",
+          "summary": "🤖 AI行业速递 2025年10月23日 PaddleOCR VL: 0.9B参数量的专业OCR模型如何击败GPT 4o与通用大模型 分类： 技术前沿解读 来源： 数字生命卡兹克 、 开源星探 核心洞察： PaddleOCR VL的成功标志...",
+          "tags": [
+            "Ai",
+            "Daily"
+          ],
+          "url": "ai/2025/10/23.md"
+        },
+        {
           "date": "2025-10-22",
           "title": "🤖 AI行业速递 - 2025年10月22日",
           "summary": "🤖 AI行业速递 2025年10月22日 OpenAI发布ChatGPT Atlas浏览器：Agent能力与传统搜索融合，重塑互联网入口与用户交互范式 分类： 产品与商业模式 来源： 极客公园 、 有机大橘子 、 夕小瑶科技说 、 机器之心...",
